--- a/userpanels/src/app/UI/cart/cart.component.html
+++ b/userpanels/src/app/UI/cart/cart.component.html
@@ -8,7 +8,7 @@
       <div *ngFor="let cart of cartItems">
         <div class="card w-100 mt-1">
             <div class="card-body d-flex align-items-center">
-              <img src="{{cart.image}}" alt="Logo" style="margin-top: -15px;">
+              <img src="{{cart.image}}" alt="Logo">
               <div class="flex-grow-1">
                 <ul id="cardlist">
                   <li>{{cart.title}}</li>
