--- a/userpanels/src/app/UI/payment/payment.component.html
+++ b/userpanels/src/app/UI/payment/payment.component.html
@@ -1,7 +1,7 @@
 <app-special-header [title]="title"></app-special-header> 
   <header>
     <div class="container">
-      <h1>Total Amount: {{ formData?.amount || singleCartItem?.cal_amount ||DepositData?.total_coin | currency:'INR'}}</h1>
+      <h1>Total Amount: {{ formData?.amount || singleCartItem?.amount ||DepositData?.total_coin | currency:'INR'}}</h1>
     </div>
   </header>
 
