--- a/userpanels/src/app/UI/my-panel-card/my-panel-card.component.css
+++ b/userpanels/src/app/UI/my-panel-card/my-panel-card.component.css
@@ -1,18 +1,15 @@
 img{
-    margin-top: -50px;
     height: 50px;
     width: 50px;
+    border-radius: 100%;
 }
 
 #cardlist{
     list-style-type: none;
-    margin-top: -4px;
-    margin-left: -20px;
+    margin-left: -25px;
+    margin-top: 15px;
 }
 
-.card-content{
-    height: 50px;
-}
 
 .card{
     background-color: #343A40;
