--- a/userpanels/src/styles.css
+++ b/userpanels/src/styles.css
@@ -1,5 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-html, body { height: 100%;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media (max-width: 576px) {
+    #cardlist li {
+        font-size: 12px; 
+    }
+}
