--- a/userpanels/src/app/UI/deposit-withdraw/deposit-withdraw.component.html
+++ b/userpanels/src/app/UI/deposit-withdraw/deposit-withdraw.component.html
@@ -2,7 +2,7 @@
     <div class="card">
       <div class="card-body">
         <div class="d-flex align-items-center mb-3">
-          <img src="{{panel.imageurl}}" alt="Avatar" class="rounded-circle mr-3" style="width: 50px; height: 50px;">
+          <img src="{{panel?.imageurl}}" alt="Avatar" class="rounded-circle mr-3" style="width: 50px; height: 50px;">
           <div class="mx-2">
             <h5 class="card-title mb-0">{{panel?.title}}</h5>
             <p class="card-text">{{panel?.exchange_type}}</p>
